Implement rippling rings for user position visualization